--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 
-  <title>Dev Barber - Sua barbearia!</title>
+  <title>BioSup - Sua loja de Suplementos!</title>
 </head>
 <body>
   <!-- HEADER -->
@@ -23,23 +23,24 @@
 
       <nav class="header-content container">
         <div class="header-icons" data-aos="fade-down">
-          <a href="#">
+          <a href="https://www.instagram.com/bio.suple">
            <i class="fa-brands fa-instagram fa-2x"></i>   
           </a>
-          <a href="#">
-            <i class="fa-brands fa-facebook fa-2x"></i>   
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0">
+            <i class="fa-brands fa-whatsapp fa-2x"></i>   
           </a>
-          <a href="#">
-            <i class="fa-brands fa-tiktok fa-2x"></i>   
+          <a href="https://maps.app.goo.gl/E4vNWZJxcjFy2URA6">
+            <i class="fa-brands fa-google fa-2x"></i>
           </a>
+        
         </div>
 
         <div class="header-logo" data-aos="fade-up" data-aos-delay="300">
-          <img 
+          <img class="logotipo"
             data-aos="flip-up"
             data-aos-delay="300"
             data-aos-duration=1500"
-            src="assets/logo.svg" 
+            src="assets/fundo_001.png" 
             alt="Logo da barbearia"
           />
         </div>
@@ -150,9 +151,11 @@
     <h2>Venha conhecer</h2>
   </div>
 
-  <iframe
-  width="100%"
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7476.4115143508725!2d-54.58602051703828!3d-20.45674056051272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9486e8954ac0b10d%3A0x7149aba0cb5688b8!2sShopping%20Campo%20Grande!5e0!3m2!1sen!2sbr!4v1688840244482!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  
+    <iframe
+        width="100%" 
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7962.13640392024!2d-38.4961051!3d-3.7953116!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c74f2dfee03509%3A0xe242923f8da1a8b!2sBioSup%20Suplementos!5e0!3m2!1spt-BR!2sbr!4v1749053884684!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 
   <footer class="footer">
     <div class="footer-icons">
