--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       <nav class="header-content container">
         <div class="header-icons" data-aos="fade-down">
           <a href="https://www.instagram.com/bio.suple">
-           <i class="fa-brands fa-instagram fa-2x"></i>   
+           <i class="fa-brands fa-instagram fa-3x"></i>   
           </a>
           <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0">
-            <i class="fa-brands fa-whatsapp fa-2x"></i>   
+            <i class="fa-brands fa-whatsapp fa-3x"></i>   
           </a>
           <a href="https://maps.app.goo.gl/E4vNWZJxcjFy2URA6">
-            <i class="fa-brands fa-google fa-2x"></i>
+            <i class="fa-brands fa-google fa-3x"></i>
           </a>
         
         </div>
@@ -41,13 +41,13 @@
             data-aos-delay="300"
             data-aos-duration=1500"
             src="assets/fundo_001.png" 
-            alt="Logo da barbearia"
+            alt="Logo da Loja"
           />
         </div>
 
         <div data-aos="fade-down">
-          <a class="header-button" href="#">
-            Agendar horário
+          <a class="header-button" href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0">
+            Faça seu Pedido
           </a>
         </div>
 
@@ -148,9 +148,8 @@
   <!-- FOOTER -->
 
   <div class="services">
-    <h2>Venha conhecer</h2>
+    <h2>Venha Conhecer !</h2>
   </div>
-
   
     <iframe
         width="100%" 
