--- a/index.html
+++ b/index.html
@@ -23,14 +23,17 @@
 
       <nav class="header-content container">
         <div class="header-icons" data-aos="fade-down">
-          <a href="https://www.instagram.com/bio.suple">
-           <i class="fa-brands fa-instagram fa-3x"></i>   
+          <a href="https://www.instagram.com/bio.suple"
+          target="_blank">
+           <i class="fa-brands fa-instagram fa-2x"></i>   
           </a>
-          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0">
-            <i class="fa-brands fa-whatsapp fa-3x"></i>   
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+          target="_blank">
+            <i class="fa-brands fa-whatsapp fa-2x"></i>   
           </a>
-          <a href="https://maps.app.goo.gl/E4vNWZJxcjFy2URA6">
-            <i class="fa-brands fa-google fa-3x"></i>
+          <a href="https://maps.app.goo.gl/E4vNWZJxcjFy2URA6"
+          target="_blank">
+            <i class="fa-brands fa-google fa-2x"></i>
           </a>
         
         </div>
@@ -46,7 +49,8 @@
         </div>
 
         <div data-aos="fade-down">
-          <a class="header-button" href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0">
+          <a class="header-button" href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
             Faça seu Pedido
           </a>
         </div>
@@ -54,14 +58,15 @@
       </nav>
 
       <main class="hero container" data-aos="fade-up" data-aos-delay="400">
-        <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE.</h1>
-        <p>Horário de funcionamento: 09:00 ás 19:00</p>
+        <h1>Nutrição de alta performance para resultados reais.</h1>
+        <p>Horário de funcionamento: Seg a Sexta 08:00 ás 19:00</p>
+        <p>Sábado 08:00 ás 15:00</p>
+        <p>Entrega em toda Fortaleza</p>
         <a 
           href="https://api.whatsapp.com/send?phone=5511000000000&text=Quero%20fazer%20um%20agendamento%20hoje!" 
           class="button-contact" 
-          target="_blank"
-        >
-          Agendar horário
+          target="_blank">
+          A força que você busca começa aqui.
         </a>
       </main>
 
