--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h1>Nutrição de alta performance para resultados reais.</h1>
         <p>Horário de funcionamento: Seg a Sexta 08:00 ás 19:00</p>
         <p>Sábado 08:00 ás 15:00</p>
-        <p>Entrega em toda Fortaleza</p>
+        <p>Entrega em Fortaleza</p>
         <a 
           href="https://api.whatsapp.com/send?phone=5511000000000&text=Quero%20fazer%20um%20agendamento%20hoje!" 
           class="button-contact" 
@@ -79,7 +79,7 @@
     <div class="container about-content">
       <div data-aos="zoom-in" data-aos-delay="100">
         <img 
-          src="assets/images.svg" 
+          src="./assets/Design.png" 
           alt="Imagem sobre a barbearia"
         />
       </div>
