--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
       </nav>
 
       <main class="hero container" data-aos="fade-up" data-aos-delay="400">
-        <h1>Nutrição de alta performance para resultados reais.</h1>
+        <h1>_Nutrição de alta performance para resultados reais_</h1>
         <p>Horário de funcionamento: Seg a Sexta 08:00 ás 19:00</p>
         <p>Sábado 08:00 ás 15:00</p>
-        <p>Entrega em Fortaleza</p>
+        <p>Entrega em toda Fortaleza</p>
         <a 
           href="https://api.whatsapp.com/send?phone=5511000000000&text=Quero%20fazer%20um%20agendamento%20hoje!" 
           class="button-contact" 
@@ -86,11 +86,10 @@
 
       <div 
         class="about-description"
-        data-aos="zoom-out-left" data-aos-delay="250"
-      >
+        data-aos="zoom-out-left" data-aos-delay="250">
         <h2>Sobre</h2>
-        <p>Lorem ipsum dolor sit amet consectetur. Ornare eget pellentesque proin risus. Orci proin morbi vestibulum convallis leo vestibulum mus. Non duis augue eros mattis a quis sem sodales.</p>
-        <p>Horário de funcionamento: <strong>09:00</strong> ás <strong>19:00</strong></p>
+        <p>🏋️‍♀️ Queremos convidar vocês a conhecerem a nossa loja, onde qualidade e excelência se encontram. Venham descobrir uma variedade incrível de produtos que vão potencializar os seus treinos e ajudar a alcançar os seus objetivos. Esperamos por vocês de braços abertos. 💪</p>
+        <p>Horário de funcionamento: <strong> 08:00</strong> ás <strong>19:00</strong></p>
       </div>
 
     </div>
@@ -101,18 +100,18 @@
   <section class="services">
 
     <div class="services-content container">
-      <h2>Serviços</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem nihil officiis sed magni in reiciendis cupiditate tenetur cumque voluptatum quibusdam, consectetur impedit quaerat dicta iusto velit atque enim culpa dolore.</p>
+      <h2>Nossa Loja</h2>
+      <p>Venha descobrir a nossa incrível seleção de suplementos e transforme a sua jornada de fitness. Visite a nossa loja hoje e alcance os seus objetivos de forma saudável.</p>
     </div>
 
-    <section class="haircuts">
+    <section class="paineis"> 
 
-      <div class="haircut" data-aos="fade-up" data-aos-delay="150">
+      <div class="painel" data-aos="fade-up" data-aos-delay="150">
         <img
           src="assets/corte1.png"
           alt="Corte normal"
         />
-        <div class="haircut-info">
+        <div class="painel-info">
           <strong>Corte normal</strong>
           <button>
             R$ 45,00
@@ -120,7 +119,7 @@
         </div>
       </div>
 
-      <div class="haircut" data-aos="fade-up" data-aos-delay="250">
+      <div class="painel" data-aos="fade-up" data-aos-delay="250">
         <img
           src="assets/corte2.png"
           alt="Barba completa"
@@ -133,12 +132,12 @@
         </div>
       </div>
 
-      <div class="haircut" data-aos="fade-up" data-aos-delay="400">
+      <div class="painel" data-aos="fade-up" data-aos-delay="400">
         <img
           src="assets/corte3.png"
           alt="Corte e barba"
         />
-        <div class="haircut-info">
+        <div class="painel-info">
           <strong>Corte e barba</strong>
           <button>
             R$ 85,00
