--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
       <div 
         class="about-description"
         data-aos="zoom-out-left" data-aos-delay="250">
-        <h2>Sobre</h2>
-        <p>🏋️‍♀️ Queremos convidar vocês a conhecerem a nossa loja, onde qualidade e excelência se encontram. Venham descobrir uma variedade incrível de produtos que vão potencializar os seus treinos e ajudar a alcançar os seus objetivos. Esperamos por vocês de braços abertos. 💪</p>
+        <h2>Convite</h2>
+        <p>🏋️‍♀️ Queremos convidar vocês a conhecerem a nossa loja, onde qualidade e excelência se encontram. Venham descobrir uma variedade incrível de produtos que vão potencializar os seus treinos e ajudar a alcançar seus objetivos. Esperamos por vocês de braços abertos. 💪</p>
         <p>Horário de funcionamento: <strong> 08:00</strong> ás <strong>19:00</strong></p>
       </div>
 
@@ -101,58 +101,209 @@
 
     <div class="services-content container">
       <h2>Nossa Loja</h2>
-      <p>Venha descobrir a nossa incrível seleção de suplementos e transforme a sua jornada de fitness. Visite a nossa loja hoje e alcance os seus objetivos de forma saudável.</p>
+      <p>Venha descobrir a nossa incrível seleção de suplementos e transforme sua jornada fitness. Visite nossa loja e alcance seus objetivos de forma saudável.</p>
     </div>
 
     <section class="paineis"> 
 
       <div class="painel" data-aos="fade-up" data-aos-delay="150">
         <img
-          src="assets/corte1.png"
+          src="assets/painel-01.png"
           alt="Corte normal"
         />
         <div class="painel-info">
-          <strong>Corte normal</strong>
-          <button>
-            R$ 45,00
-          </button>
+          <strong>Preço justo.</strong>
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
+            Consulte !
+          </a>
         </div>
       </div>
 
       <div class="painel" data-aos="fade-up" data-aos-delay="250">
         <img
-          src="assets/corte2.png"
+          src="assets/painel-03.png"
           alt="Barba completa"
         />
-        <div class="haircut-info">
-          <strong>Barba completa</strong>
-          <button>
-            R$ 35,00
-          </button>
+        <div class="painel-info">
+          <strong>Produtos de qualidade.</strong>
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
+            Confira !
+          </a>
         </div>
       </div>
 
       <div class="painel" data-aos="fade-up" data-aos-delay="400">
         <img
-          src="assets/corte3.png"
+          src="assets/painel-02.png"
           alt="Corte e barba"
         />
         <div class="painel-info">
-          <strong>Corte e barba</strong>
-          <button>
-            R$ 85,00
-          </button>
+          <strong>Atendimento com Nutricionista.</strong>
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
+            Aproveite.
+          </a>
+        </div>
+      </div>
+      <!-- //////////////// PRODUTOS //////////////////// -->
+    </section>
+
+    <div class="services-content container">
+        <h2>Produtos</h2>
+        <p>Venha conhecer a biosup, a melhor loja de suplementos da cidade dos Funcionários e até do Brasil 🤭🤭🤭
+            Atendimento aqui é sempre acolhedor, tirando suas dúvidas com um sorriso no rosto. Nosso atendimento online é sempre vapt vupt. Os produtos são de altíssima qualidade e direto de fábrica ou de distribuidoras credenciadas, nossos preços são justos e competitivos, e claro não pode faltar aquele mimo que eu sei que vocês gostam.
+        </p>
+        <p>💪🏼Vem pra biosup 💪🏼</p>
+    </div>
+
+    <section class="paineis"> 
+
+      <div class="painel produto" data-aos="fade-up" data-aos-delay="150">
+        <img
+          src="assets/C4Pump01.jpg"
+          alt="normal"
+        />
+        <div class="painel-info">
+          <strong>Preço justo.</strong>
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
+            Consulte !
+          </a>
+        </div>
+      </div>
+
+      <div class="painel produto" data-aos="fade-up" data-aos-delay="250">
+        <img
+          src="assets/longJack01.jpg"
+          alt="normal"
+        />
+        <div class="painel-info">
+          <strong>Produtos de qualidade.</strong>
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
+            Confira !
+          </a>
+        </div>
+      </div>
+
+      <div class="painel produto" data-aos="fade-up" data-aos-delay="400">
+        <img
+          src="assets/spooky01.jpg"
+          alt="normal"
+        />
+        <div class="painel-info">
+          <strong>Atendimento com Nutricionista.</strong>
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
+            Aproveite.
+          </a>
         </div>
       </div>
 
     </section>
+<!-- //////////////////  SEGUNDA FILEIRA //////////////////////// -->
+
+    <section class="paineis"> 
+
+      <div class="painel produto" data-aos="fade-up" data-aos-delay="150">
+        <img
+          src="assets/testoFeminy01.jpg"
+          alt="normal"
+        />
+        <div class="painel-info">
+          <strong>Preço justo.</strong>
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
+            Consulte !
+          </a>
+        </div>
+      </div>
+
+      <div class="painel produto" data-aos="fade-up" data-aos-delay="250">
+        <img
+          src="assets/thermoCutter01.jpg"
+          alt="normal"
+        />
+        <div class="painel-info">
+          <strong>Produtos de qualidade.</strong>
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
+            Confira !
+          </a>
+        </div>
+      </div>
+
+      <div class="painel produto" data-aos="fade-up" data-aos-delay="400">
+        <img
+          src="assets/Tribulus01.jpg"
+          alt="normal"
+        />
+        <div class="painel-info">
+          <strong>Atendimento com Nutricionista.</strong>
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
+            Aproveite.
+          </a>
+        </div>
+      </div>
+
+    </section>
+<!-- /////////////////// TERCEIRA FILEIRA ///////////////////// -->
+    <section class="paineis"> 
+
+      <div class="painel produto" data-aos="fade-up" data-aos-delay="150">
+        <img
+          src="assets/wheyPistache.jpg"
+          alt="normal"
+        />
+        <div class="painel-info">
+          <strong>Preço justo.</strong>
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
+            Consulte !
+          </a>
+        </div>
+      </div>
+
+      <div class="painel produto" data-aos="fade-up" data-aos-delay="250">
+        <img
+          src="assets/wheyBrigadeiro01.jpg"
+          alt="normal"
+        />
+        <div class="painel-info">
+          <strong>Produtos de qualidade.</strong>
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
+            Confira !
+          </a>
+        </div>
+      </div>
+
+      <div class="painel produto" data-aos="fade-up" data-aos-delay="400">
+        <img
+          src="assets/vitamiun02.jpg"
+          alt="normal"
+        />
+        <div class="painel-info">
+          <strong>Atendimento com Nutricionista.</strong>
+          <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
+            Aproveite.
+          </a>
+        </div>
+      </div>
+
+    </section>
+
 
   </section>
 
   <!-- FOOTER -->
 
   <div class="services">
-    <h2>Venha Conhecer !</h2>
+    <h2>Visite-nos!</h2>
   </div>
   
     <iframe
@@ -162,25 +313,29 @@
 
   <footer class="footer">
     <div class="footer-icons">
-      <a href="#">
-        <i class="fa-brands fa-instagram fa-2x"></i>   
-       </a>
-      <a href="#">
-         <i class="fa-brands fa-facebook fa-2x"></i>   
-       </a>
-      <a href="#">
-         <i class="fa-brands fa-tiktok fa-2x"></i>   
-       </a>
+        <a href="https://www.instagram.com/bio.suple"
+            target="_blank">
+            <i class="fa-brands fa-instagram fa-2x"></i>   
+        </a>
+        <a href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
+            target="_blank">
+            <i class="fa-brands fa-whatsapp fa-2x"></i>   
+        </a>
+        <a href="https://maps.app.goo.gl/E4vNWZJxcjFy2URA6"
+            target="_blank">
+            <i class="fa-brands fa-google fa-2x"></i>
+        </a>
     </div>
 
     <div>
-      <img 
-        src="assets/logo.svg" 
-        alt="Logo barbearia"
-      />
+        <img 
+            class="logotipo"
+            src="assets/fundo_001.png" 
+            alt="Logo da Loja"
+        />
     </div>
-
-    <p>Copyright 2023 | Dev Barbearia - Todos direitos reservados.</p>
+   
+    <p>Copyright 2025 | BioSup - Suplementos - Todos direitos reservados.</p>
   </footer>
 
   <!-- Button Whatsapp -->
