--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
       </nav>
 
       <main class="hero container" data-aos="fade-up" data-aos-delay="400">
-        <h1>_Nutrição de alta performance para resultados reais_</h1>
-        <p>Horário de funcionamento: Seg a Sexta 08:00 ás 19:00</p>
-        <p>Sábado 08:00 ás 15:00</p>
+        <h1>Nutrição de alta performance para resultados reais</h1>
+        <p>Horário de funcionamento: Seg a Sexta 09:00 ás 19:00</p>
+        <p>Sábado 09:00 ás 15:00</p>
         <p>Entrega em toda Fortaleza</p>
         <a 
-          href="https://api.whatsapp.com/send?phone=5511000000000&text=Quero%20fazer%20um%20agendamento%20hoje!" 
+          href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0" 
           class="button-contact" 
           target="_blank">
           A força que você busca começa aqui.
@@ -80,7 +80,7 @@
       <div data-aos="zoom-in" data-aos-delay="100">
         <img 
           src="./assets/Design.png" 
-          alt="Imagem sobre a barbearia"
+          alt="Imagem"
         />
       </div>
 
@@ -88,8 +88,8 @@
         class="about-description"
         data-aos="zoom-out-left" data-aos-delay="250">
         <h2>Convite</h2>
-        <p>🏋️‍♀️ Queremos convidar vocês a conhecerem a nossa loja, onde qualidade e excelência se encontram. Venham descobrir uma variedade incrível de produtos que vão potencializar os seus treinos e ajudar a alcançar seus objetivos. Esperamos por vocês de braços abertos. 💪</p>
-        <p>Horário de funcionamento: <strong> 08:00</strong> ás <strong>19:00</strong></p>
+        <p>Convidamos vocês a conhecerem nossa loja, onde qualidade e excelência se encontram. Venham descobrir uma variedade incrível de produtos que vão potencializar os seus treinos e ajudar a alcançar seus objetivos. Esperamos por vocês de braços abertos.</p>
+        <p>Horário de funcionamento: <strong> 09:00</strong> ás <strong>19:00</strong></p>
       </div>
 
     </div>
@@ -109,7 +109,7 @@
       <div class="painel" data-aos="fade-up" data-aos-delay="150">
         <img
           src="assets/painel-01.png"
-          alt="Corte normal"
+          alt="normal"
         />
         <div class="painel-info">
           <strong>Preço justo.</strong>
@@ -123,7 +123,7 @@
       <div class="painel" data-aos="fade-up" data-aos-delay="250">
         <img
           src="assets/painel-03.png"
-          alt="Barba completa"
+          alt="completa"
         />
         <div class="painel-info">
           <strong>Produtos de qualidade.</strong>
@@ -152,10 +152,10 @@
 
     <div class="services-content container">
         <h2>Produtos</h2>
-        <p>Venha conhecer a biosup, a melhor loja de suplementos da cidade dos Funcionários e até do Brasil 🤭🤭🤭
+        <p>Venha conhecer a biosup, a melhor loja de suplementos da cidade dos Funcionários e até do Brasil.
             Atendimento aqui é sempre acolhedor, tirando suas dúvidas com um sorriso no rosto. Nosso atendimento online é sempre vapt vupt. Os produtos são de altíssima qualidade e direto de fábrica ou de distribuidoras credenciadas, nossos preços são justos e competitivos, e claro não pode faltar aquele mimo que eu sei que vocês gostam.
         </p>
-        <p>💪🏼Vem pra biosup 💪🏼</p>
+        <p>Vem pra biosup </p>
     </div>
 
     <section class="paineis"> 
