--- a/index.html
+++ b/index.html
@@ -341,13 +341,13 @@
   <!-- Button Whatsapp -->
 
   <a 
-   href="https://api.whatsapp.com/send?phone=5511000000000&text=Quero%20fazer%20um%20agendamento%20hoje!"
+   href="https://api.whatsapp.com/send/?phone=558597085000&text=Ol%C3%A1,%20Gostaria%20de%20fazer%20um%20Pedido%20!&type=phone_number&app_absent=0"
    class="btn-whatsapp"
    target="_blank"
    data-aos="zoom-in-up" data-aos-delay="400"
   >
     <img src="assets/whatssapp.svg" alt="Botao whatsapp" />
-    <span class="tooltip-text">Agende seu horário</span>
+    <span class="tooltip-text">Faça seu pedido</span>
   </a>
 
 
