--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </p>
         <p>Vem pra biosup </p>
     </div>
-//////////////////////////////////// PRODUTOS /////////////////////////////////////////
+<!-- //////////////////////////////////// PRODUTOS ///////////////////////////////////////// -->
     <section class="paineis"> 
 
       <div class="painel produto" data-aos="fade-up" data-aos-delay="150">
