--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </nav>
 
       <main class="hero container" data-aos="fade-up" data-aos-delay="400">
-        <h1>Nutrição de alLta performance para resultados reais</h1>
+        <h1>Nutrição de alta performance para resultados reais</h1>
         <p>Horário de funcionamento: Seg a Sexta 09:00 ás 19:00</p>
         <p>Sábado 09:00 ás 15:00</p>
         <p>Entrega em toda Fortaleza</p>
